Spelling mistake modified

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
     <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
-    <meta name="p:domain_verify" content="f7cd26280bf27d936bbbb2358a46006f"/>
+    <meta name="p:domain_verify" content="f7cd26280bf27d936bbbb2358a46006f" />
 
     <!-- Webpage Title -->
     <title>Prime Way | Enhanced Technology</title>
@@ -353,7 +353,7 @@
                                 <p>We take pride in delivering projects before the deadline to extend the pre-launch
                                     testing period. This ensures a smooth user experience and it also helps with
                                     bringing visitors back. You can check out or <a class="red page-scroll"
-                                    href="#projects">projects section</a>
+                                        href="#projects">projects section</a>
                                 </p>
                             </div>
                         </li>
@@ -388,13 +388,17 @@
                                         <div class="col-lg-6">
                                             <div class="text-container">
                                                 <h4>Static webpage for brands</h4>
-                                                <p></p>
-                                                <p class="testimonial-text"> website design which simply shows your product or business online is a static website design. Our programming team is an expert to create such sites as it does not require any content management system.Static websight is simply design by our team and make sure that it is more easy to handle and user-friendly</p>
-                                                <p class="testimonial-text">"I am happy to have choosen primeway for our
-                                                    Buisness implimentation on online . Their specialized experience helped the
-                                                    project and made it available 2 weeks prior the launch date for
-                                                    extensive testing"</p>
-                                                <div class="testimonial-author">Amal xavier-General manager</div>
+                                                <p> website design which simply shows your
+                                                    product or business online is a static website design. Our
+                                                    programming team is an expert to create such sites as it does not
+                                                    require any content management system.Static website is simply
+                                                    design by our team and make sure that it is more easy to handle and
+                                                    user-friendly</p>
+                                                <p class="testimonial-text">"I am happy to have chosen primeway for our
+                                                    Business implementation on online . Their specialized experience
+                                                    helped the project and made it available 2 weeks prior the launch
+                                                    date for extensive testing"</p>
+                                                <div class="testimonial-author">Amal xavier-General Manager</div>
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -412,13 +416,15 @@
                                         <div class="col-lg-6">
                                             <div class="text-container">
                                                 <h4>Ecommerce websight</h4>
-                                                <p>We were proud to partner with primeway in order to create a
+                                                <p>We were proud to partner with Primeway in order to create a
                                                     modern online store where customers can purchase some of the best
                                                     items from the market at affordable prices</p>
-                                                <p class="testimonial-text">"I Think one of my correct decisition for took consultation on primeway buisness platfoam ,I am happy to have chosen primeway for our
-                                                    Bisness Growth partner. Their specialized experience helped the
-                                                    project and made it available as much as possible "</p>
-                                                <div class="testimonial-author">Sharon sabu - Sales Manager</div>
+                                                <p class="testimonial-text">"I Think one of my correct decision for
+                                                    took consultation on primeway business platform, I am happy to have
+                                                    chosen primeway for our Business Growth partner. Their specialized
+                                                    experience helped the project and made it available as much as
+                                                    possible "</p>
+                                                <div class="testimonial-author">Sharon Sabu - Sales Manager</div>
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -437,8 +443,14 @@
                                         <div class="col-lg-6">
                                             <div class="text-container">
                                                 <h4>Social media marketing campaign</h4>
-                                                <p>Social media campaigns are the rocket fuel of your marketing efforts, a concentrated burst of energy that pays off in a major boost to your brand reputation, awareness or sales.</p>
-                                                <p class="testimonial-text">"It is a wonderfull experience to co-operate with primeway team to my buisness turned high troug Digtital marketing.Its wonderfull team Having their own idea for social media campaign . I am happy to have chosen primeway for bisness support"</p>
+                                                <p>Social media campaigns are the rocket fuel of your marketing efforts,
+                                                    a concentrated burst of energy that pays off in a major boost to
+                                                    your brand reputation, awareness or sales.</p>
+                                                <p class="testimonial-text">"It is a wonderful experience to co-operate
+                                                    with primeway team to my business turned high through Digital
+                                                    marketing. It's wonderful team Having their own idea for social media
+                                                    campaign . I am happy to have chosen primeway for business support"
+                                                </p>
                                                 <div class="testimonial-author">Alex Philip - Development Manager
                                                 </div>
                                             </div> <!-- end of text-container -->
