--- a/index.html
+++ b/index.html
@@ -388,17 +388,16 @@
                                         <div class="col-lg-6">
                                             <div class="text-container">
                                                 <h4>Static webpage for brands</h4>
-                                                <p> website design which simply shows your
-                                                    product or business online is a static website design. Our
-                                                    programming team is an expert to create such sites as it does not
-                                                    require any content management system.Static website is simply
-                                                    design by our team and make sure that it is more easy to handle and
-                                                    user-friendly</p>
+                                                <p> website design which simply shows your product or business online is
+                                                    a static website design. Our programming team is an expert to create
+                                                    such sites as it does not require any content management system.
+                                                    Static website is simply design by our team and make sure
+                                                    that it is more easy to handle and user-friendly</p>
                                                 <p class="testimonial-text">"I am happy to have chosen primeway for our
-                                                    Business implementation on online . Their specialized experience
+                                                    Business implementation on online. Their specialized experience
                                                     helped the project and made it available 2 weeks prior the launch
                                                     date for extensive testing"</p>
-                                                <div class="testimonial-author">Amal xavier-General Manager</div>
+                                                <div class="testimonial-author">Amal Xavier - General Manager</div>
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -416,14 +415,15 @@
                                         <div class="col-lg-6">
                                             <div class="text-container">
                                                 <h4>Ecommerce websight</h4>
-                                                <p>We were proud to partner with Primeway in order to create a
-                                                    modern online store where customers can purchase some of the best
-                                                    items from the market at affordable prices</p>
-                                                <p class="testimonial-text">"I Think one of my correct decision for
-                                                    took consultation on primeway business platform, I am happy to have
-                                                    chosen primeway for our Business Growth partner. Their specialized
-                                                    experience helped the project and made it available as much as
-                                                    possible "</p>
+                                                <p>We were proud to partner with Primeway in order to create a modern
+                                                    online store where customers can purchase some of the best items
+                                                    from the market at affordable prices</p>
+                                                <p class="testimonial-text">"I Think one of my correct decision for took
+                                                    consultation on primeway business platform, I am happy to have
+                                                    chosen
+                                                    primeway for our Business Growth partner. Their specialized
+                                                    experience
+                                                    helped the project and made it available as much as possible "</p>
                                                 <div class="testimonial-author">Sharon Sabu - Sales Manager</div>
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
@@ -448,8 +448,8 @@
                                                     your brand reputation, awareness or sales.</p>
                                                 <p class="testimonial-text">"It is a wonderful experience to co-operate
                                                     with primeway team to my business turned high through Digital
-                                                    marketing. It's wonderful team Having their own idea for social media
-                                                    campaign . I am happy to have chosen primeway for business support"
+                                                    marketing. It's wonderful team Having their own idea for social
+                                                    media campaign . I am happy to have chosen primeway for business support"
                                                 </p>
                                                 <div class="testimonial-author">Alex Philip - Development Manager
                                                 </div>
