--- a/index.html
+++ b/index.html
@@ -449,7 +449,8 @@
                                                 <p class="testimonial-text">"It is a wonderful experience to co-operate
                                                     with primeway team to my business turned high through Digital
                                                     marketing. It's wonderful team Having their own idea for social
-                                                    media campaign . I am happy to have chosen primeway for business support"
+                                                    media campaign . I am happy to have chosen primeway for business
+                                                    support"
                                                 </p>
                                                 <div class="testimonial-author">Alex Philip - Development Manager
                                                 </div>
@@ -583,9 +584,9 @@
                 <div class="col-lg-12">
                     <div class="footer-col first">
                         <h6> About Prime Way</h6>
-                        <p class="p-small">Prime Way team is a buisness supporting platfoam for helping to improve your
-                            buisness through good online apperance by websight developing, Social media, online
-                            portfolio management conitious analytics and giveing advise for your entire Growth </p>
+                        <p class="p-small">Prime Way team is a business supporting platform for helping to improve your
+                            business through good online appearance by website developing, Social media, online
+                            portfolio management continuous analytics and giving advise for your entire Growth</p>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h6> Quick Links</h6>
