--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="title" content="Prime Way | Ehanced Technology">
+    <meta name="title" content="Prime Way | Enhanced Technology">
     <meta name="description"
         content="Business supporting platform enhance online appearance by website developing, social media, portfolio management, continuous analytics for Growth">
     <meta name="keywords"
