htacess file added

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <div class="footer-col second">
                         <h6> Quick Links</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="terms.html">Terms & Conditions</a><br>
+                            <li><a href="terms">Terms & Conditions</a><br>
                                 <a href="privacy.html">Privacy Policy<br></a>
                                 <a class="page-scroll" href="#about">About<br></a>
                                 <a class="page-scroll" href="#details">Services<br></a>
