removed file extentions

--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>
+            <a class="navbar-brand logo-text page-scroll" href="index">PRIME WAY</a>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -287,8 +287,8 @@
                     <div class="footer-col second">
                         <h6> Quick Links</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="terms.html">Terms & Conditions</a><br>
-                                <a href="privacy.html">Privacy Policy<br></a>
+                            <li><a href="terms">Terms & Conditions</a><br>
+                                <a href="privacy">Privacy Policy<br></a>
                                 <a class="page-scroll" href="#about">About<br></a>
                                 <a class="page-scroll" href="#details">Services<br></a>
                                 <a class="page-scroll" href="#contact">Book consultation<br></a>
