--- a/terms.html
+++ b/terms.html
@@ -54,7 +54,7 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="./images/4646.png" alt="alternative"></a>  -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="index">PRIME WAY</a>
+            <a class="navbar-brand logo-text page-scroll" href="https://primeway.online/">PRIME WAY</a>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
