extention for contact page removed

--- a/privacy.html
+++ b/privacy.html
@@ -265,7 +265,7 @@
                         navigation that slides from outside the screen. Features include an eye catching morphtext in
                         the header, details Strategy and Plan and other features.</p>
 
-                    <a class="btn-solid-reg mb-5" href="index.html#contact">Contact Us</a>
+                    <a class="btn-solid-reg mb-5" href="index#contact">Contact Us</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
