--- a/terms.html
+++ b/terms.html
@@ -244,7 +244,7 @@
                         stores orange and gray hues with one color backgrounds to maximize the impact of your written
                         and online content.</p>
 
-                    <a class="btn-solid-reg mb-5" href="index.html#contact">Contact Us</a>
+                    <a class="btn-solid-reg mb-5" href="index#contact">Contact Us</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
