--- a/privacy.html
+++ b/privacy.html
@@ -289,7 +289,7 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="terms">Terms & Conditions</a><br>
                                 <a href="privacy">Privacy Policy<br></a>
-                                <a class="page-scroll" href="#about">About<br></a>
+                                <a class="page-scroll" href="https://primeway.online/#about">About<br></a>
                                 <a class="page-scroll" href="#details">Services<br></a>
                                 <a class="page-scroll" href="#contact">Book consultation<br></a>
                                 <a class="page-scroll" href="#strengths"><br></a>
