--- a/terms.html
+++ b/terms.html
@@ -63,23 +63,23 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="https://primeway.online/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Services</a>
+                        <a class="nav-link page-scroll" href="https://primeway.online/#details">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#strengths">Details</a>
+                        <a class="nav-link page-scroll" href="https://primeway.online/#strengths">Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#about">About</a>
+                        <a class="nav-link page-scroll" href="https://primeway.online/#about">About</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                 -->
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#contact">Contact</a>
+                        <a class="nav-link page-scroll" href="https://primeway.online/#contact">Contact</a>
                     </li>
                 </ul>
             </div> <!-- end of navbar-collapse -->
@@ -268,10 +268,10 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="terms">Terms & Conditions</a><br>
                                 <a href="privacy">Privacy Policy<br></a>
-                                <a class="page-scroll" href="#about">About<br></a>
-                                <a class="page-scroll" href="#details">Services<br></a>
-                                <a class="page-scroll" href="#contact">Book consultation<br></a>
-                                <a class="page-scroll" href="#strengths"><br></a>
+                                <a class="page-scroll" href="https://primeway.online/#about">About<br></a>
+                                <a class="page-scroll" href="https://primeway.online/#details">Services<br></a>
+                                <a class="page-scroll" href="https://primeway.online/#contact">Book consultation<br></a>
+                                <a class="page-scroll" href="https://primeway.online/#strengths"><br></a>
                             </li>
                         </ul>
                     </div> <!-- end of footer-col -->
