spelling mistake edited

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>We offer complete websight development and support</h3>
+                        <h3>We offer complete website development and support</h3>
                         <a class="btn-solid-lg page-scroll" href="#details">Services</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -195,7 +195,7 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Developing beautiful websight</div>
+                                <div class="media-body">Developing beautiful website</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -339,7 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-container">
-                    <h4>Our mission is to deliver reliable websight together with the necessary consulting
+                    <h4>Our mission is to deliver reliable website together with the necessary consulting
                         and marketing services which will help to improve their buisness stability</h4>
                 </div> <!-- end of text-container -->
             </div> <!-- end of row -->
@@ -358,7 +358,7 @@
                             <div class="bullet">1</div>
                             <div class="media-body">
                                 <h4>Specialized Expertise</h4>
-                                <p>We've made it ourmission to provide the best websight development services in the
+                                <p>We've made it ourmission to provide the best website development services in the
                                     industry. Besides the firm itself we also provide branding and strategy services to
                                     create solid foundation on your buisness </p>
                             </div>
@@ -442,7 +442,7 @@
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
                                             <div class="text-container">
-                                                <h4>Ecommerce websight</h4>
+                                                <h4>Ecommerce website</h4>
                                                 <p>We were proud to partner with Primeway in order to create a modern
                                                     online store where customers can purchase some of the best items
                                                     from the market at affordable prices</p>
