--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         })(window, document, 'script', 'dataLayer', 'GTM-KB8JBBQ');
     </script>
     <!-- End Google Tag Manager -->
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8000061160181161"
+     crossorigin="anonymous"></script>
 
 </head>
 
